--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,12 @@
                 background-color: #38c172;
                 border-color: #38c172;
             }
+            th {
+                font-weight: 500 !important;
+            }
+            td {
+                font-weight: 400 !important;
+            }
         </style>
     </head>
     <body>
