--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
             crossorigin="anonymous"
         />
 
+
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -61,6 +62,10 @@
             td {
                 font-weight: 400 !important;
             }
+            .sidebar {
+       width: 14rem !important;
+       min-height: 130% !important;
+              }
         </style>
     </head>
     <body>
