--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+ 
 
         <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
         <link
