--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,15 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Cash Flow" />
 
-        
-
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
- 
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
         <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
-        <link
-            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-            rel="stylesheet"
-        />
+        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
 
         <!-- Custom styles for this template-->
         <link href="assets/css/sb-admin-2.min.css" rel="stylesheet" />
@@ -31,7 +25,6 @@
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
             crossorigin="anonymous"
         />
-
 
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -66,9 +59,9 @@
                 font-weight: 400 !important;
             }
             .sidebar {
-       width: 14rem !important;
-       min-height: 130% !important;
-              }
+                width: 14rem !important;
+                min-height: 165% !important;
+            }
         </style>
     </head>
     <body>
@@ -99,7 +92,7 @@
     <!-- Page level custom scripts -->
     <!-- <script src="assets/js/demo/chart-area-demo.js"></script>
     <script src="assets/js/demo/chart-pie-demo.js"></script> -->
-    
+
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
 
     <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
